Set JDK to oraclejdk8